add source filename and hash if created from csv

--- a/docs/userguide/wrapper/SpecialIO.ipynb
+++ b/docs/userguide/wrapper/SpecialIO.ipynb
@@ -424,30 +424,61 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5058387300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5058387300\">\n",
+       "                        <input id=\"group-ds--5485255000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5485255000\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5059784300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5059788300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5059788300\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5486475800\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5486478600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5486478600\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5060040500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5060043200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5060043200\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5486751400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5486754100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5486754100\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(x: 4) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -678,30 +709,61 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5091358700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5091358700\">\n",
+       "                        <input id=\"group-ds--5514426900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5514426900\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5092874600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5092877700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5092877700\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5515573200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5515576500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5515576500\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5093082300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5093084700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5093084700\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5515789700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5515791900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5515791900\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(x: 12) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -924,30 +986,61 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5122193500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5122193500\">\n",
+       "                        <input id=\"group-ds--5546858700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5546858700\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/x-5123323300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/x-5123325800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/x-5123325800\">x</label>\n",
+       "                <ul id=\"ds-1-/x-5548786300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/x-5548790500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/x-5548790500\">x</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/y-5123460700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/y-5123463100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/y-5123463100\">y</label>\n",
+       "                <ul id=\"ds-1-/y-5549325600\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/y-5549329800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/y-5549329800\">y</label>\n",
        "                    <span class=\"h5tb-dims\">(2, 8) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1171,22 +1264,53 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5147502000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5147502000\">\n",
+       "                        <input id=\"group-ds--5570663000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5570663000\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-5148405600\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-5148409100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5148409100\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5571443700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5571446400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5571446400\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1441,22 +1565,53 @@
        ".h5tb-attr-list li,\r\n",
        ".h5tb-attr-list li:hover {\r\n",
        "    background-color: rgba(0,0,0,.0);\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       "/* Tooltip container */\r\n",
+       ".tooltip {\r\n",
+       "position: relative;\r\n",
+       "display: inline-block;\r\n",
+       "cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Tooltip text */\r\n",
+       ".tooltip .tooltiptext {\r\n",
+       "visibility: hidden;\r\n",
+       "width: 300px;\r\n",
+       "background-color: #555;\r\n",
+       "color: #fff;\r\n",
+       "text-align: center;\r\n",
+       "border-radius: 6px;\r\n",
+       "padding: 5px;\r\n",
+       "position: absolute;\r\n",
+       "z-index: 1;\r\n",
+       "bottom: 125%;\r\n",
+       "left: 50%;\r\n",
+       "margin-left: -60px;\r\n",
+       "opacity: 0;\r\n",
+       "transition: opacity 0.3s;\r\n",
+       "}\r\n",
+       "\r\n",
+       "/* Show the tooltip on hover */\r\n",
+       ".tooltip:hover .tooltiptext {\r\n",
+       "visibility: visible;\r\n",
+       "opacity:  1;\r\n",
        "}</style></head>\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5190888200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5190888200\">\n",
+       "                        <input id=\"group-ds--5614515200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5614515200\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/testimg-5191500300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/testimg-5191502800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5191502800\">testimg</label>\n",
+       "                <ul id=\"ds-1-/testimg-5615678300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/testimg-5615682700\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/testimg-5615682700\">testimg</label>\n",
        "                    <span class=\"h5tb-dims\">(5, 20, 10) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -1505,7 +1660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
