Simplify file uploads for zenodo

--- a/docs/userguide/repository/zenodo.ipynb
+++ b/docs/userguide/repository/zenodo.ipynb
@@ -32,15 +32,7 @@
    "execution_count": 1,
    "id": "b001b211-4771-48b2-8a0f-0a0b75b3de01",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to import module h5tbx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from h5rdmtoolbox.repository import zenodo\n",
     "import h5rdmtoolbox as h5tbx"
@@ -51,7 +43,9 @@
    "id": "ac9d7063-43af-42d2-94b7-cf20c5b0e09c",
    "metadata": {},
    "source": [
-    "Init a Repo:"
+    "### 1. Init a Repo:\n",
+    "\n",
+    "For testing purpose, let's use the sandbox environment of Zenodo (`ZenodoSandboxDeposit`)"
    ]
   },
   {
@@ -69,7 +63,7 @@
    "id": "6303c7d5-684d-4bcf-a17a-217c63d26212",
    "metadata": {},
    "source": [
-    "Create a test file:"
+    "We create a test HDF5 file, which we will later publish in the repository:"
    ]
   },
   {
@@ -89,7 +83,8 @@
    "id": "70992ae8-c2d2-4263-b315-203c17325f92",
    "metadata": {},
    "source": [
-    "Prepare metadata"
+    "### 2. Add repository metadata\n",
+    "The repository needs **metadata**. The Zenodo module has a special class `Metadata` for this purpose. It validates the data expected by the Zenodo API:"
    ]
   },
   {
@@ -127,7 +122,7 @@
    "id": "3a5d6fef-b96b-45a0-8d0c-9157c5192bce",
    "metadata": {},
    "source": [
-    "Add (and publish) the metadata:"
+    "... finally make the changes effective by setting the metadata:"
    ]
   },
   {
@@ -137,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo.metadata = meta"
+    "repo.set_metadata(meta)"
    ]
   },
   {
@@ -145,46 +140,25 @@
    "id": "11efa913-f440-4431-9de7-1daa84fcbac8",
    "metadata": {},
    "source": [
-    "Upload the HDF5 file. Note, that there's a difference between `upload_file` and `upload_hdf_file`. The latter not just uploads the HDF5 file but also generates a metadata file and uploads it, too. The reason behind it is, that the HDF5 file can be very large. Before downloading the (large) HDF5 file, the user may want to review the metadata content first. This is possible through the \"metamapper-function\" which needs to be provided during upload."
+    "### 3. Upload files\n",
+    "\n",
+    "*Any* file can be added (uploaded) by calling `upload_file(...)`. It can be a simple text, CSV or binary file. Often, it is advisable to describe the content in an additional file and hence provide more (machine-interpretable) information. Best is, to use JSON-LD files for this. The JSON-LD format allows describing file content and context in a standardized way.\n",
+    "\n",
+    "One of the parameters of `upload_file(...)` is `metamapper`. It expects a function, that extracts meta information from the input file. By default, and for HDF5 files (scans for file suffixes `.hdf`, `.hdf5` and `.h5`), the built-in converter function will be called, which writes a JSON-LD file.\n",
+    "\n",
+    "By providing the `metamapper`-function, the target file and its metadata filename (which the function created) will be uploaded together.\n",
+    "\n",
+    "Adding a metadata file is especially beneficial for large, binary files. Like this, the metadata file can be downloaded and explored quickly by the user."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "194e3285-6617-422e-93ed-12108e24dec3",
+   "execution_count": 7,
+   "id": "9bc60428-785f-41aa-a356-2114e0d183ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "from h5rdmtoolbox import jsonld\n",
-    "class HDF_to_JSONLD:\n",
-    "    def __init__(self, skipND):\n",
-    "        self.skipND = skipND\n",
-    "        \n",
-    "    def __call__(self, hdf_filename):\n",
-    "        json_filename = pathlib.Path(hdf_filename).with_suffix('.json')\n",
-    "        with open(json_filename, 'w') as f:\n",
-    "            f.write(jsonld.dump_file(hdf_filename, skipND=self.skipND))\n",
-    "        return json_filename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "9bc60428-785f-41aa-a356-2114e0d183ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\repository\\zenodo\\core.py:325: UserWarning: Filename \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_4\\tmp0.hdf\" already exists in deposit. Skipping...\"\n",
-      "  warnings.warn(f'Filename \"{filename}\" already exists in deposit. Skipping...\"', UserWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "repo.upload_hdf_file(filename, metamapper=HDF_to_JSONLD(1))"
+    "repo.upload_file(filename)"
    ]
   },
   {
@@ -197,28 +171,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "500cb79c-76a4-4f3f-a84f-da36b1e63d5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tmp0.hdf': {'id': 'b0fd97a9-8a6d-4fab-b7f3-6f7903f2926f',\n",
-       "  'filename': 'tmp0.hdf',\n",
-       "  'filesize': 12384,\n",
-       "  'checksum': '02d007d9b6d35f7b35a7b47a30c4efa1',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/38652/files/b0fd97a9-8a6d-4fab-b7f3-6f7903f2926f',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/38652/draft/files/tmp0.hdf/content'}},\n",
-       " 'tmp0.json': {'id': '6910f6b4-120f-4e66-877e-e1427c9d5dd3',\n",
+       "{'tmp0.json': {'id': '11220027-8174-4d87-9c9e-3a718536af21',\n",
        "  'filename': 'tmp0.json',\n",
-       "  'filesize': 1879,\n",
-       "  'checksum': '9e0e31878c459bb61755b3026b3fb2ce',\n",
-       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/38652/files/6910f6b4-120f-4e66-877e-e1427c9d5dd3',\n",
-       "   'download': 'https://sandbox.zenodo.org/api/records/38652/draft/files/tmp0.json/content'}}}"
+       "  'filesize': 1074,\n",
+       "  'checksum': 'ef88b0f5be47cb450ab5fd6d91ccffeb',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/11220027-8174-4d87-9c9e-3a718536af21',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.json/content'}},\n",
+       " 'tmp0.hdf': {'id': '126ebe06-441d-47ab-9cd6-307db0e4150c',\n",
+       "  'filename': 'tmp0.hdf',\n",
+       "  'filesize': 6944,\n",
+       "  'checksum': '1169b5c09635913ac8e6606d86c40692',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/126ebe06-441d-47ab-9cd6-307db0e4150c',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.hdf/content'}}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.get_filenames()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b93926d6-37d8-4ba0-804a-b3892cccb8cd",
+   "metadata": {},
+   "source": [
+    "### 3b Custom metamapper\n",
+    "\n",
+    "We could of course write and use our own metadata extract function like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fbf04793-b7eb-4377-a904-edb91542b056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pathlib\n",
+    "\n",
+    "def my_meta_mapper(filename):\n",
+    "    \"\"\"very primitive...and not a jsonld file, but \n",
+    "    servese the demonstrating purpose.\"\"\"\n",
+    "    txt_filename = pathlib.Path(filename).with_suffix('.txt')\n",
+    "    with open(txt_filename, 'w') as f:\n",
+    "        f.write(f'filename: {filename}')\n",
+    "    return txt_filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "02290359-b13b-413d-9b93-9706b3ab087d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repo.upload_file(filename, metamapper=my_meta_mapper, overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "312c68e0-0a90-43de-aefe-fe5091b3f21b",
+   "metadata": {},
+   "source": [
+    "Proof, that it worked:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4e75f4fc-6311-470c-9204-93c1c5d768d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tmp0.json': {'id': '11220027-8174-4d87-9c9e-3a718536af21',\n",
+       "  'filename': 'tmp0.json',\n",
+       "  'filesize': 1074,\n",
+       "  'checksum': 'ef88b0f5be47cb450ab5fd6d91ccffeb',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/11220027-8174-4d87-9c9e-3a718536af21',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.json/content'}},\n",
+       " 'tmp0.hdf': {'id': '5cdc2613-352c-426f-b673-bf9c2e6206cc',\n",
+       "  'filename': 'tmp0.hdf',\n",
+       "  'filesize': 6944,\n",
+       "  'checksum': '1169b5c09635913ac8e6606d86c40692',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/5cdc2613-352c-426f-b673-bf9c2e6206cc',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.hdf/content'}},\n",
+       " 'tmp0.txt': {'id': 'bc9558f1-a502-484f-b660-967cbd31697b',\n",
+       "  'filename': 'tmp0.txt',\n",
+       "  'filesize': 86,\n",
+       "  'checksum': 'fafb067c01a902a14330e5aedd4b1b0a',\n",
+       "  'links': {'self': 'https://sandbox.zenodo.org/api/deposit/depositions/70629/files/bc9558f1-a502-484f-b660-967cbd31697b',\n",
+       "   'download': 'https://sandbox.zenodo.org/api/records/70629/draft/files/tmp0.txt/content'}}}"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27ad1ee4-837e-4037-9609-68d46414af17",
+   "id": "6982c604-3fb3-4976-9749-bc8efd1f0edd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -252,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
